--- a/po/s63_pi_de_DE.po
+++ b/po/s63_pi_de_DE.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: s63_pi 0.4.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-04-02 20:18-0400\n"
+"POT-Creation-Date: 2014-04-24 20:12-0400\n"
 "PO-Revision-Date: 2014-04-03 10:40+0100\n"
 "Last-Translator: CarCode <carcode@me.com>\n"
 "Language-Team: DE <carcode@me.com>\n"
@@ -20,12 +20,9 @@ msgstr ""
 msgid "   Error: Cannot create "
 msgstr "   Fehler: Kann nicht erzeugen "
 #
-msgid ""
-"A valid certificate can be obtained from the IHO website or your data "
-"supplier.\n"
+#, c-format
+msgid "Attempted update: %d\n"
 msgstr ""
-"Ein gültiges Zertifikat erhält man von der IHO Website oder Ihrem Karten-"
-"Händler.\n"
 #
 msgid "Cancel"
 msgstr "Abbruch"
@@ -45,8 +42,9 @@ msgstr "Zertifikat Schlüssel Import erfolgreich\n"
 msgid "Certificate Name"
 msgstr "Zertifikat Name"
 #
-msgid "Create eSENCs on Import?\n"
-msgstr "Erzeuge eSENCs bei Import?\n"
+#, fuzzy
+msgid "Charts"
+msgstr "S63 Karten"
 #
 msgid "Creating eSenc"
 msgstr "Erzeuge eSenc"
@@ -94,8 +92,13 @@ msgstr "Installierte S63 Zellen Freigaben"
 msgid "Installed S63 Certificates/Keys"
 msgstr "Installierte S63 Zertifikate/Schlüssel"
 #
-msgid "Invalid cell permit starts with "
-msgstr "Ungültiger Zellen Permit startet mit "
+#, fuzzy
+msgid "Keys/Permits"
+msgstr "UserPermit"
+#
+#, c-format
+msgid "Latest intalled update: %d\n"
+msgstr ""
 #
 msgid "New Installpermit..."
 msgstr "Neuer InstallPermit..."
@@ -103,18 +106,18 @@ msgstr "Neuer InstallPermit..."
 msgid "New Userpermit..."
 msgstr "Neuer UserPermit..."
 #
-msgid "Note:\n"
-msgstr "Hinweis:\n"
-#
 msgid "OK"
 msgstr "OK"
 #
 msgid ""
 "OpenCPN can create eSENC files as cells are imported.\n"
 "\n"
-msgstr ""
-"OpenCPN kann eSENC Dateien bei Zellen-Import erzeugen.\n"
+"Note:\n"
+"This process may take some time.\n"
+"eSENCS not processed here will be created as needed by OpenCPN.\n"
 "\n"
+"Create eSENCs on Import?\n"
+msgstr ""
 #
 msgid "PUB files (*.PUB)|*.PUB|txt files (*.txt)|*.txt|All files (*.*)|*.*"
 msgstr ""
@@ -141,8 +144,15 @@ msgstr ""
 "Unterstützt S63 Karten.\n"
 "\n"
 #
+#, fuzzy
+msgid "S63_pi Install Permit Required"
+msgstr "InstallPermit ungültig"
+#
 msgid "S63_pi Log"
 msgstr "S63_pi Log"
+#
+msgid "S63_pi Userpermit Required"
+msgstr ""
 #
 msgid "S63_pi backchannel could not listen at the specified port !\n"
 msgstr "S63_pi Rück-Kanal hört nicht auf angegebenen Port!\n"
@@ -181,31 +191,94 @@ msgstr ""
 msgid ""
 "Security Scheme Error\n"
 "\n"
+"SSE 06 - The SA Signed Data Server Certificate is invalid.\n"
+"The SA may have issued a new public key or the ENC may originate from another "
+"service.\n"
+"A new SA public key can be obtained from the IHO website or from your data "
+"supplier.\n"
+"\n"
+"Cell name: "
+msgstr ""
+#
+#, fuzzy
+msgid ""
+"Security Scheme Error\n"
+"\n"
 "SSE 08 - SA Digital Certificate file incorrect format.\n"
+"A valid certificate can be obtained from the IHO website or your data "
+"supplier.\n"
 msgstr ""
-"Sicherheitsschema Fehler\n"
-"\n"
-"SSE 08 - SA Digital Zertifikat Datei falsches Format.\n"
+"Ein gültiges Zertifikat erhält man von der IHO Website oder Ihrem Karten-"
+"Händler.\n"
 #
+#, fuzzy
 msgid ""
 "Security Scheme Error\n"
 "\n"
-"SSE 13 - Cell Permit is invalid (checksum is incorrect)\n"
-msgstr ""
-"Sicherheitsschema Fehler\n"
-"\n"
-"SSE 13 - Zellen Permit ist ungültig (Prüfsumme ist falsch)\n"
-#
-msgid ""
-"Security Scheme Error\n"
-"\n"
-"SSE 24 - ENC Signature format is incorrect.\n"
-"\n"
+"SSE 09 - ENC Signature is invalid.\n"
+"Cell name: "
 msgstr ""
 "Sicherheitsschema Fehler\n"
 "\n"
 "SSE 24 - ENC Signatur Format ist falsch.\n"
 "\n"
+#
+#, fuzzy
+msgid ""
+"Security Scheme Error\n"
+"\n"
+"SSE 11 - Cell permit not found"
+msgstr ""
+"Sicherheitsschema Fehler\n"
+"\n"
+"SSE 13 - Zellen Permit ist ungültig (Prüfsumme ist falsch)\n"
+#
+#, fuzzy
+msgid ""
+"Security Scheme Error\n"
+"\n"
+"SSE 12 - Cell permit format is incorrect\n"
+"\n"
+"Incorrect cell permit line starts with "
+msgstr ""
+"Sicherheitsschema Fehler\n"
+"\n"
+"SSE 24 - ENC Signatur Format ist falsch.\n"
+"\n"
+#
+#, fuzzy
+msgid ""
+"Security Scheme Error\n"
+"\n"
+"SSE 13 - Cell Permit is invalid (checksum is incorrect)\n"
+"or the Cell Permit is for a different system.\n"
+"\n"
+" Invalid cell permit starts with "
+msgstr ""
+"Sicherheitsschema Fehler\n"
+"\n"
+"SSE 13 - Zellen Permit ist ungültig (Prüfsumme ist falsch)\n"
+#
+#, fuzzy
+msgid ""
+"Security Scheme Error\n"
+"\n"
+"SSE 24 - ENC Signature format is incorrect.\n"
+"\n"
+" Cell name: "
+msgstr ""
+"Sicherheitsschema Fehler\n"
+"\n"
+"SSE 24 - ENC Signatur Format ist falsch.\n"
+"\n"
+#
+msgid ""
+"Security Scheme Warning\n"
+"\n"
+"SSE 26 - ENC is not authenticated by the IHO acting as the SA.\n"
+"\n"
+"Cell name: "
+msgstr ""
 #
 msgid "Select PERMIT.TXT File"
 msgstr "Wähle PERMIT.TXT Datei"
@@ -228,12 +301,6 @@ msgstr "Test Ergebnisse"
 msgid "Test Userpermit"
 msgstr "Teste UserPermit"
 #
-msgid "The process may be Cancelled by the user at any time.\n"
-msgstr "Der Prozeß kann jederzeit vom Anwender abgebrochen werden.\n"
-#
-msgid "This process may take some time.\n"
-msgstr "Dieser Prozeß kann etwas dauern.\n"
-#
 msgid ""
 "This update and all subsequent updates to this cell are NOT applied.\n"
 "\n"
@@ -254,16 +321,62 @@ msgstr "UserPermit OK"
 msgid "Userpermit invalid"
 msgstr "UserPermit ungültig"
 #
-msgid ""
-"eSENCS not yet processed will be created as needed by OpenCPN.\n"
-"\n"
+msgid "cell:"
 msgstr ""
-"Noch nicht gemachte eSENCS werden bei Bedarf von OpenCPN erzeugt.\n"
-"\n"
 #
-msgid ""
-"or the Cell Permit is for a different system.\n"
-"\n"
+msgid "s63_pi Message"
 msgstr ""
-"oder das Zellen Permit ist für ein anderes System.\n"
-"\n"
+#
+#
+#~ msgid "Create eSENCs on Import?\n"
+#~ msgstr "Erzeuge eSENCs bei Import?\n"
+#
+#
+#~ msgid "Invalid cell permit starts with "
+#~ msgstr "Ungültiger Zellen Permit startet mit "
+#
+#
+#~ msgid "Note:\n"
+#~ msgstr "Hinweis:\n"
+#
+#
+#~ msgid ""
+#~ "OpenCPN can create eSENC files as cells are imported.\n"
+#~ "\n"
+#~ msgstr ""
+#~ "OpenCPN kann eSENC Dateien bei Zellen-Import erzeugen.\n"
+#~ "\n"
+#
+#
+#~ msgid ""
+#~ "Security Scheme Error\n"
+#~ "\n"
+#~ "SSE 08 - SA Digital Certificate file incorrect format.\n"
+#~ msgstr ""
+#~ "Sicherheitsschema Fehler\n"
+#~ "\n"
+#~ "SSE 08 - SA Digital Zertifikat Datei falsches Format.\n"
+#
+#
+#~ msgid "The process may be Cancelled by the user at any time.\n"
+#~ msgstr "Der Prozeß kann jederzeit vom Anwender abgebrochen werden.\n"
+#
+#
+#~ msgid "This process may take some time.\n"
+#~ msgstr "Dieser Prozeß kann etwas dauern.\n"
+#
+#
+#~ msgid ""
+#~ "eSENCS not yet processed will be created as needed by OpenCPN.\n"
+#~ "\n"
+#~ msgstr ""
+#~ "Noch nicht gemachte eSENCS werden bei Bedarf von OpenCPN erzeugt.\n"
+#~ "\n"
+#
+#
+#~ msgid ""
+#~ "or the Cell Permit is for a different system.\n"
+#~ "\n"
+#~ msgstr ""
+#~ "oder das Zellen Permit ist für ein anderes System.\n"
+#~ "\n"
